add rel=me link to try to verfy this way

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,8 @@
 
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
   <link rel="stylesheet" type="text/css" href="/css/override.css">
-
+  <link href="https://hachyderm.io/@macf00bar" rel="me">
+  
   {% feed_meta %}
 
   <!-- Begin highlight.js support -->
